Closed Bug 328182 Opened 19 years ago Closed 19 years ago

Mingw build failure in cairo-win32-surface.c

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: martijn.martijn)

References

Details

Attachments

(1 file, 1 obsolete file)

I'm getting this error with my Mingw build on windowsXP: -DMOZ_DLL_SUFFIX=\".dll\" -DJS_THREADSAFE=1 -DMOZ_REFLOW_PERF=1 -DMOZ_REFLOW_PE RF_DSP=1 -DMOZILLA_LOCALE_VERSION=\"1.9a1\" -DMOZILLA_REGION_VERSION=\"1.9a1\" - DMOZILLA_SKIN_VERSION=\"1.8\" -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /cygdrive/c /mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: In function `_cair o_win32_surface_create_for_dc': c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:262: warning: retur n discards qualifiers from pointer target type c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:272: warning: point er targets in passing arg 1 of `cairo_image_surface_create_for_data' differ in s ignedness c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:308: warning: retur n discards qualifiers from pointer target type c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:311: warning: retur n discards qualifiers from pointer target type c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: In function `_comp osite_alpha_blend': c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:626: error: `SHADEB LENDCAPS' undeclared (first use in this function) c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:626: error: (Each u ndeclared identifier is reported only once c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:626: error: for eac h function it appears in.) c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:626: error: `SB_NON E' undeclared (first use in this function) c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: In function `cairo _win32_surface_create': c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1010: warning: retu rn discards qualifiers from pointer target type c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1026: warning: retu rn discards qualifiers from pointer target type c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1035: warning: retu rn discards qualifiers from pointer target type c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1152:1: warning: C+ + style comments are not allowed in ISO C90 c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1152:1: warning: (t his will be reported only once per input file) make[6]: *** [cairo-win32-surface.o] Error 1 make[6]: Leaving directory `/cygdrive/c/mozilla/mozilla/gfx/cairo/cairo/src' make[5]: *** [libs] Error 2 make[5]: Leaving directory `/cygdrive/c/mozilla/mozilla/gfx/cairo' make[4]: *** [libs] Error 2 make[4]: Leaving directory `/cygdrive/c/mozilla/mozilla/gfx' make[3]: *** [libs_tier_9] Error 2 make[3]: Leaving directory `/cygdrive/c/mozilla/mozilla' make[2]: *** [tier_9] Error 2 make[2]: Leaving directory `/cygdrive/c/mozilla/mozilla' make[1]: *** [alldep] Error 2 make[1]: Leaving directory `/cygdrive/c/mozilla/mozilla' make: *** [alldep] Error 2 I think this happens because of the fix for bug 328072.
Attached patch patch (obsolete) — Splinter Review
I found this: http://sourceforge.net/tracker/index.php?func=detail&aid=1237690&group_id=2435&atid=302435 When I add part of that patch in cairo-win32-surface.h (which I did in the patch), then building succeeds.
no real point in defining things we don't use... #define SHADEBLENDCAPS 120 #define SB_NONE 0x00000000 should be enough.
wouldn't a better fix be to define those #ifndef SHADEBLENDCAPS / #ifndef SB_NONE?
Attached patch patch2Splinter Review
So like this, then?
Attachment #212737 - Attachment is obsolete: true
Attachment #212826 - Flags: review?(pavlov)
Comment on attachment 212826 [details] [diff] [review] patch2 looks good. addl'ing review so vlad can get this in to his git tree do you need me to check this in?
Attachment #212826 - Flags: review?(vladimir)
Attachment #212826 - Flags: review?(pavlov)
Attachment #212826 - Flags: review+
Well, I can check it in myself now, but you may check it in also, if you like. But it needs additional review from Vlad, right?
the patch is fine -- go ahead. i just r?'d vlad so he can make sure we push it upstream
Assignee: nobody → martijn.martijn
Checking in gfx/cairo/cairo/src/cairo-win32-surface.c; /cvsroot/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c,v <-- cairo-win32-surface.c new revision: 1.17; previous revision: 1.16 done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: