Bug 328182 - Mingw build failure in cairo-win32-surface.c. r=pavlov